[tool.poetry]
name = "repl_nix_caesar-cipher-1-start"
version = "0.1.0"
description = ""
authors = ["Scott Stanford <smstanford83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
art = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
